# rust-player

./: Cargo.toml  readme.md
src/: config.rs  main.rs  utils.rs
src/media/: lyrics.rs  media.rs  mod.rs  play_item.rs  player.rs
src/script/: mod.rs
src/ui/: common.rs  fs.rs  header.rs  media.rs  mod.rs  play_list.rs
