[package]
name = "rust-player"
authors = ["subl", "lxq"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

# tui终端
crossterm = "0.27.0"
ratatui = "0.26.0"

# cli
clap = { version = "4.5.1", features = ["derive"]}

# 音乐播放
rodio = "0.17.3"
# 获取mp3的播放时长
mp3-duration = "0.1.10"
# 获取歌曲标签信息
id3 = "1.13.1"

# 正则表达式
regex = "1.10.3"

[features]
debug=[]
en=[]
zh=[]
default=["en"]
# default=["debug"]